--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
 
                             <li class="cdmenu-item">
                                 <div class="d-grid">
-                                    <button class="btn dropdown header-dropdown-font-1"
-                                        style="border-radius: 1rem; background-color: #0D99FF; " type="button"
-                                        data-bs-toggle="dropdown" aria-expanded="false">
+                                    <button class=" dropdown active" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                                         Sign up
                                     </button>
                                 </div>
@@ -86,9 +84,7 @@
                             <li class="cdmenu-item">
                                 <div class="d-grid">
                                     <!-- Button login modal -->
-                                    <button type="button" class="btn header-dropdown-font-2 border dropdown "
-                                        style="color: #000; border-radius: 1rem;" data-bs-toggle="modal"
-                                        data-bs-target="#loginmodel">
+                                    <button type="button" class="dropdown" data-bs-toggle="modal" data-bs-target="#loginmodel">
                                         Log in
                                     </button>
 
@@ -918,9 +914,9 @@
     <!-- login model -->
     <!-- Modal -->
     <div class="modal fade" id="loginmodel" tabindex="-1" aria-labelledby="loginmodel" aria-hidden="true">
-        <div class="modal-dialog modal-fullscreen">
+        <div class="modal-dialog modal-lg">
             <div class="modal-content">
-                <div class="modal-body p-0 m-0">
+                <div class="modal-body p-0 pt-1 m-0" style="overflow: hidden;" >
                     <div id="login"></div>
                 </div>
             </div>
