--- a/index.html
+++ b/index.html
@@ -916,8 +916,8 @@
     <div class="modal fade" id="loginmodel" tabindex="-1" aria-labelledby="loginmodel" aria-hidden="true">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
-                <div class="modal-body p-0 pt-1 m-0" style="overflow: hidden;" >
-                    <div id="login"></div>
+                <div class="modal-body p-0 m-0" style="overflow: hidden;" >
+                    <div id="login" style="border-radius: 10px; overflow: hidden;"></div>
                 </div>
             </div>
         </div>
