--- a/login.html
+++ b/login.html
@@ -21,7 +21,7 @@
     <style>
         .model-close-btn {
             display: inline-flex;
-            padding: 12px 16px;
+            padding: 2px 6px;
             justify-content: center;
             align-items: center;
             gap: 10px;
@@ -388,22 +388,27 @@
                     </button>
                     <div class="gapedDiv">
 
-                        <div class="orClass">or</div>
+                        <div class="orClass mb-3">or</div>
 
                         <button>
-                            Continue with ID.me
+                           <div> <img src="./img/idme-icon.svg" alt=""></div>
+                            <p class="mb-0">Continue with ID.me</p>
                         </button>
                         <button>
-                            Continue with Email
+                           <div> <img src="./img/gmail-icon.svg" alt=""></div>
+                            <p class="mb-0">Continue with Email</p>
                         </button>
                         <button>
-                            Continue with Google
+                            <div><img src="./img/google-icon.svg" alt=""></div>
+                            <p class="mb-0">Continue with Google</p>
                         </button>
                         <button>
-                            Continue with Facebook
+                            <div><img src="./img/facebook-icon.svg" alt=""></div>
+                            <p class="mb-0">Continue with Facebook</p>
                         </button>
                         <button>
-                            Continue with Apple
+                            <div><img src="./img/apple-icon.svg" alt=""></div>
+                            <p class="mb-0">Continue with Apple</p>
                         </button>
                     </div>
                 </form>
@@ -411,8 +416,8 @@
 
 
 
-            <div class="w-50" id="rightSideEligibleId">
-                <div class="eligibleListContainer m-1" style="background: none !important;">
+            <div class="w-50" id="rightSideEligibleId" style="background-image: url(./img/BG.png);">
+                <div class="eligibleListContainer" style="margin: 3rem 1rem;">
 
                     <div class="mobile-display-flex mb-4">
                         <div class="" id="toggleLinkReverse">
