--- a/login.html
+++ b/login.html
@@ -417,7 +417,7 @@
 
 
             <div class="w-50" id="rightSideEligibleId" style="background-image: url(./img/BG.png);">
-                <div class="eligibleListContainer" style="margin: 3rem 1rem;">
+                <div class="eligibleListContainer" style="margin: 3rem 5%;">
 
                     <div class="mobile-display-flex mb-4">
                         <div class="" id="toggleLinkReverse">
