--- a/mapPopup.html
+++ b/mapPopup.html
@@ -44,7 +44,7 @@
 
 <body>
 
-  <section class="position-relative border"
+  <div class="position-relative border"
     style=" background-color: white; width: 100%; max-width: 272px; border-radius: 16px; overflow: hidden; height: auto; top: 100%;">
 
     <div class="  popup-font-4 close-button position-absolute d-flex align-items-center justify-content-center "
@@ -110,7 +110,7 @@
       <p class="popup-font">$300 <span class="popup-font-3">per night</span> </p>
     </div>
 
-  </section>
+  </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!-- <script src="./script.js"></script> -->
