--- a/listings-map.html
+++ b/listings-map.html
@@ -21,6 +21,10 @@
     href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <!-- map -->
+  <script src="https://use.fontawesome.com/releases/v6.2.0/js/all.js"></script>
+
+  <script type="module" src="./map/mapindex.js"></script>
 </head>
 
 <body>
@@ -402,6 +406,7 @@
         </div>
       </div>
     </div>
+
     <div id="Right-Map" class="Right-Map">
       <div class="map-container">
         <div class="button-div">
@@ -714,8 +719,6 @@
     </div>
   </div>
 
-
-  <script src="js/maptest.js"></script>
   <script src="js/bootstrap.bundle.min.js"></script>
 
 
@@ -829,12 +832,12 @@ window.onscroll = function() {
 
 
 
-  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-  <script type="module" src="Js/maptest.js"></script>
-  <script>
-    (g => { var h, a, k, p = "The Google Maps JavaScript API", c = "google", l = "importLibrary", q = "__ib__", m = document, b = window; b = b[c] || (b[c] = {}); var d = b.maps || (b.maps = {}), r = new Set, e = new URLSearchParams, u = () => h || (h = new Promise(async (f, n) => { await (a = m.createElement("script")); e.set("libraries", [...r] + ""); for (k in g) e.set(k.replace(/[A-Z]/g, t => "_" + t[0].toLowerCase()), g[k]); e.set("callback", c + ".maps." + q); a.src = `https://maps.${c}apis.com/maps/api/js?` + e; d[q] = f; a.onerror = () => h = n(Error(p + " could not load.")); a.nonce = m.querySelector("script[nonce]")?.nonce || ""; m.head.append(a) })); d[l] ? console.warn(p + " only loads once. Ignoring:", g) : d[l] = (f, ...n) => r.add(f) && u().then(() => d[l](f, ...n)) })
-      ({ key: "AIzaSyCOw87eJaP-4vV_kWiycPExCaPasiudSYg", v: "weekly" });
-  </script>
+
+   <!-- prettier-ignore -->
+    <script>
+(g=>{var h,a,k,p="The Google Maps JavaScript API",c="google",l="importLibrary",q="__ib__",m=document,b=window;b=b[c]||(b[c]={});var d=b.maps||(b.maps={}),r=new Set,e=new URLSearchParams,u=()=>h||(h=new Promise(async(f,n)=>{await (a=m.createElement("script"));e.set("libraries",[...r]+"");for(k in g)e.set(k.replace(/[A-Z]/g,t=>"_"+t[0].toLowerCase()),g[k]);e.set("callback",c+".maps."+q);a.src=`https://maps.${c}apis.com/maps/api/js?`+e;d[q]=f;a.onerror=()=>h=n(Error(p+" could not load."));a.nonce=m.querySelector("script[nonce]")?.nonce||"";m.head.append(a)}));d[l]?console.warn(p+" only loads once. Ignoring:",g):d[l]=(f,...n)=>r.add(f)&&u().then(()=>d[l](f,...n))})
+    ({ key: "AIzaSyCOw87eJaP-4vV_kWiycPExCaPasiudSYg", v: "weekly"});</script>
+
 
   <script>
     // Select the elements to transform
