--- a/searchbarmain.html
+++ b/searchbarmain.html
@@ -594,7 +594,8 @@
 
                                         </div>
                                     </div>
-                                    <a class="dashboard-font-24 mt-5" onclick="selectyourdate()" style="font-weight: 700; display: flex; justify-content: center;">
+                                    <a class="dashboard-font-24 mt-5" onclick="selectyourdate()"
+                                        style="font-weight: 700; display: flex; justify-content: center;">
                                         Select start date
                                     </a>
                                 </div>
@@ -606,12 +607,15 @@
                                             Select start date
                                         </p>
                                         <a onclick="selectyourdate()" style="font-weight: 700;">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                                                <path d="M3.6642 3.79466L3.72471 3.72456C3.9466 3.50267 4.29382 3.4825 4.5385 3.66405L4.6086 3.72456L9.99999 9.11567L15.3914 3.72456C15.6355 3.48048 16.0312 3.48048 16.2753 3.72456C16.5193 3.96864 16.5193 4.36437 16.2753 4.60845L10.8842 9.99984L16.2753 15.3912C16.4972 15.6131 16.5173 15.9603 16.3358 16.205L16.2753 16.2751C16.0534 16.497 15.7062 16.5172 15.4615 16.3356L15.3914 16.2751L9.99999 10.884L4.6086 16.2751C4.36452 16.5192 3.96879 16.5192 3.72471 16.2751C3.48064 16.031 3.48064 15.6353 3.72471 15.3912L9.11582 9.99984L3.72471 4.60845C3.50283 4.38656 3.48265 4.03934 3.6642 3.79466L3.72471 3.72456L3.6642 3.79466Z" fill="#B6B6B9"/>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                                viewBox="0 0 20 20" fill="none">
+                                                <path
+                                                    d="M3.6642 3.79466L3.72471 3.72456C3.9466 3.50267 4.29382 3.4825 4.5385 3.66405L4.6086 3.72456L9.99999 9.11567L15.3914 3.72456C15.6355 3.48048 16.0312 3.48048 16.2753 3.72456C16.5193 3.96864 16.5193 4.36437 16.2753 4.60845L10.8842 9.99984L16.2753 15.3912C16.4972 15.6131 16.5173 15.9603 16.3358 16.205L16.2753 16.2751C16.0534 16.497 15.7062 16.5172 15.4615 16.3356L15.3914 16.2751L9.99999 10.884L4.6086 16.2751C4.36452 16.5192 3.96879 16.5192 3.72471 16.2751C3.48064 16.031 3.48064 15.6353 3.72471 15.3912L9.11582 9.99984L3.72471 4.60845C3.50283 4.38656 3.48265 4.03934 3.6642 3.79466L3.72471 3.72456L3.6642 3.79466Z"
+                                                    fill="#B6B6B9" />
                                             </svg>
                                         </a>
                                     </div>
-                                        <div class="container">
+                                    <div class="container">
                                         <div class="d-flex justify-content-between">
                                             <div>
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="13" height="16"
@@ -910,7 +914,7 @@
 
                                 <p class="calander-font-1">Starting May 1, 2024
                                     <span onclick="selectyourdateyear()"
-                                     style=" text-decoration: underline; color: #0D99FF; font-weight: 700;">Edit
+                                        style=" text-decoration: underline; color: #0D99FF; font-weight: 700;">Edit
                                         date</span>
                                 </p>
 
@@ -920,8 +924,11 @@
                                             Select date
                                         </p>
                                         <a onclick="selectyourdateyear()" style="font-weight: 700;">
-                                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-                                                <path d="M3.6642 3.79466L3.72471 3.72456C3.9466 3.50267 4.29382 3.4825 4.5385 3.66405L4.6086 3.72456L9.99999 9.11567L15.3914 3.72456C15.6355 3.48048 16.0312 3.48048 16.2753 3.72456C16.5193 3.96864 16.5193 4.36437 16.2753 4.60845L10.8842 9.99984L16.2753 15.3912C16.4972 15.6131 16.5173 15.9603 16.3358 16.205L16.2753 16.2751C16.0534 16.497 15.7062 16.5172 15.4615 16.3356L15.3914 16.2751L9.99999 10.884L4.6086 16.2751C4.36452 16.5192 3.96879 16.5192 3.72471 16.2751C3.48064 16.031 3.48064 15.6353 3.72471 15.3912L9.11582 9.99984L3.72471 4.60845C3.50283 4.38656 3.48265 4.03934 3.6642 3.79466L3.72471 3.72456L3.6642 3.79466Z" fill="#B6B6B9"/>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
+                                                viewBox="0 0 20 20" fill="none">
+                                                <path
+                                                    d="M3.6642 3.79466L3.72471 3.72456C3.9466 3.50267 4.29382 3.4825 4.5385 3.66405L4.6086 3.72456L9.99999 9.11567L15.3914 3.72456C15.6355 3.48048 16.0312 3.48048 16.2753 3.72456C16.5193 3.96864 16.5193 4.36437 16.2753 4.60845L10.8842 9.99984L16.2753 15.3912C16.4972 15.6131 16.5173 15.9603 16.3358 16.205L16.2753 16.2751C16.0534 16.497 15.7062 16.5172 15.4615 16.3356L15.3914 16.2751L9.99999 10.884L4.6086 16.2751C4.36452 16.5192 3.96879 16.5192 3.72471 16.2751C3.48064 16.031 3.48064 15.6353 3.72471 15.3912L9.11582 9.99984L3.72471 4.60845C3.50283 4.38656 3.48265 4.03934 3.6642 3.79466L3.72471 3.72456L3.6642 3.79466Z"
+                                                    fill="#B6B6B9" />
                                             </svg>
                                         </a>
                                     </div>
@@ -929,12 +936,22 @@
                                         <p class="dashboard-font-23">
                                             Select date
                                         </p>
-                                        <input type="text" class="form-select" placeholder="Current year" style="width: 300px;">
+                                        <div class="year-search" style="position: relative;">
+                                            <input type="text" id="dropdownInput" class="form-select"
+                                                placeholder="Current year">
+                                            <ul class="year-search-sugessions" aria-labelledby="dropdownMenuButton">
+                                                <li class="dropdown-item">2022</li>
+                                                <li class="dropdown-item">2023</li>
+                                                <li class="dropdown-item">2024</li>
+                                                <li class="dropdown-item">2025</li>
+                                            </ul>
+                                        </div>
+
                                         <p class="dashboard-font-23">
                                             Select start day
                                         </p>
                                     </div>
-                                        <div class="container mt-3">
+                                    <div class="container mt-3">
                                         <div class="d-flex justify-content-between">
                                             <div>
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="13" height="16"
@@ -1316,28 +1333,30 @@
 
     <script>
 
-     function selectyourdate(){
-        let selectdate = document.getElementById("select-your-date");
-        let dropdownHeight = document.getElementById("calander-main")
-        if(selectdate.style.display === "none"){
-            selectdate.style.display = "block" ;
-            dropdownHeight.style.height = "610px";
-        }else {
-            selectdate.style.display = "none";
-            dropdownHeight.style.height = "auto";
+        function selectyourdate() {
+            let selectdate = document.getElementById("select-your-date");
+            let dropdownHeight = document.getElementById("calander-main");
+
+            if (selectdate.style.display === "none" || selectdate.style.display === "") {
+                selectdate.style.display = "block";
+                dropdownHeight.style.height = "610px";
+            } else {
+                selectdate.style.display = "none";
+                dropdownHeight.style.height = "auto";
+            }
         }
-     }
-     function selectyourdateyear(){
-        let selectdate = document.getElementById("select-your-date-year");
-        let dropdownHeight = document.getElementById("calander-main")
-        if(selectdate.style.display === "none"){
-            selectdate.style.display = "block" ;
-            dropdownHeight.style.height = "750px";
-        }else {
-            selectdate.style.display = "none";
-            dropdownHeight.style.height = "auto";
+        function selectyourdateyear() {
+            let selectdate = document.getElementById("select-your-date-year");
+            let dropdownHeight = document.getElementById("calander-main");
+
+            if (selectdate.style.display === "none" || selectdate.style.display === "") {
+                selectdate.style.display = "block";
+                dropdownHeight.style.height = "610px";
+            } else {
+                selectdate.style.display = "none";
+                dropdownHeight.style.height = "auto";
+            }
         }
-     }
 
         function initializeDynamicContent() {
             const slider = document.getElementById("durationSlider");
