--- a/index.html
+++ b/index.html
@@ -16,9 +16,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="js/jquery-3.7.1.js"></script>
     <script src="js/headerFooter.js"></script>
-    <link
-        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
-        rel="stylesheet">
+    
+    <!-- search mobile responsive -->
+    <link rel="stylesheet" href="./responsivedatepicker2/styles.css">
+    <link rel="stylesheet" href="./responsivedatepicker2/monthsecond.css">
+    <link rel="stylesheet" href="./responsivedatepicker2/month.css">
+    <link rel="stylesheet" href="./responsivedatepicker2/accordion.css">
+    <script src="./responsivedatepicker2/accordion1.js"></script>
+    <script src="./responsivedatepicker2/month.js"></script>
+    <script src="./responsivedatepicker2/script.js"></script>
+    <script src="./responsivedatepicker2/year.js"></script>
+
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
@@ -111,6 +120,9 @@
                 <div id="searchbarmain"></div>
             </div>
             <p onclick="canIJoin()" title="" class="btn btn-link">Can I Join?</p>
+            <button type="button" class="dropdown" data-bs-toggle="modal" data-bs-target="#search_mobile">
+                search
+            </button>
 
         </div>
     </section>
@@ -924,6 +936,21 @@
     </div>
 
 
+    
+
+<!-- search mobile responsive model -->
+    <!-- Modal -->
+    <div class="modal fade" id="search_mobile" tabindex="-1" aria-labelledby="search-mobile" aria-hidden="true">
+        <div class="modal-dialog modal-fullscreen-md-down">
+            <div class="modal-content">
+                <div class="modal-body p-0 m-0" >
+                    <div id="mobilesearch" style="overflow: hidden;"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
 
 
 
@@ -931,8 +958,6 @@
 
 
     <div id="preloader"></div>
-
-
 
 
 
