--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="js/jquery-3.7.1.js"></script>
     <script src="js/headerFooter.js"></script>
-    
+
     <!-- search mobile responsive -->
     <link rel="stylesheet" href="./responsivedatepicker2/styles.css">
     <link rel="stylesheet" href="./responsivedatepicker2/monthsecond.css">
@@ -116,14 +116,11 @@
 
         <div class="hero-search" style=" padding-top: 6rem; padding-bottom: 3rem;">
             <h1>Bringing the military community together</h1>
-            <div class="d-flex justify-content-center mb-4" style=" min-height: 100px; height: fit-content;">
-                <div id="searchbarmain"></div>
+            <div class="d-flex justify-content-center mb-4" style="position: relative; min-height: 100px; height: fit-content;">
+                <div id="searchbarmain" class="w-100"></div>
+                <button type="button" class="dropdown search-mobile " data-bs-toggle="modal" data-bs-target="#search_mobile"></button>
             </div>
             <p onclick="canIJoin()" title="" class="btn btn-link">Can I Join?</p>
-            <button type="button" class="dropdown" data-bs-toggle="modal" data-bs-target="#search_mobile">
-                search
-            </button>
-
         </div>
     </section>
 
@@ -941,7 +938,7 @@
 <!-- search mobile responsive model -->
     <!-- Modal -->
     <div class="modal fade" id="search_mobile" tabindex="-1" aria-labelledby="search-mobile" aria-hidden="true">
-        <div class="modal-dialog modal-fullscreen-md-down">
+        <div class="modal-dialog modal-fullscreen-md-down" style="margin-top: 1rem; overflow: hidden; border-radius: 1rem 1rem 0 0; width: 100%; height: calc(100vh - 1rem);">
             <div class="modal-content">
                 <div class="modal-body p-0 m-0" >
                     <div id="mobilesearch" style="overflow: hidden;"></div>
