--- a/responsivedatepicker2/index.html
+++ b/responsivedatepicker2/index.html
@@ -17,7 +17,9 @@
 <body>
     <div class="accordion-container">
         <div>
-            <span class="close-icon"><i class="bi bi-x"></i></span>
+            <button type="button" class="dropdown" data-bs-toggle="modal" data-bs-target="#search_mobile">
+                <span class="close-icon"><i class="bi bi-x"></i></span>
+            </button>
         </div>
         <div class="accordion-item">
             <div class="accordion-header">
