--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="search-bar" class="search-main" style="position: fixed;">
         <div class="d-flex d-n align-items-center justify-content-evenly gap-2 mt-2">
             <div class="d-flex align-items-center gap-2  search-bar search-bar-container w-100 border m-0"
-                style="border-radius: 2rem; padding: 6px 16px;">
+                style="position: relative; border-radius: 2rem; padding: 6px 16px;">
                 <div>
                     <img src="img/Search 2.png" width="20px" height="20px" alt="">
                 </div>
@@ -47,9 +47,8 @@
                     </p>
                 </div>
             </div>
-
+            <button type="button" class="dropdown search-mobile " data-bs-toggle="modal" data-bs-target="#search_mobile"></button>
         </div>
-
     </div>
 
 
