--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
 
 
 
-                <div class="d-flex gap-1 m-n">
+                <div class=" gap-1 m-n" style="display: flex;">
                     <ul class="nav nav-pills">
                         <li class="nav-item"><a href="#" class="nav-link fs-16 bp-3 fit-content" aria-current="page">Add
                                 my place</a>
                         </li>
                     </ul>
                     <!--menu items-->
-                    <div class="dropdown header-drpdn-icon m-n">
+                    <div class="dropdown header-drpdn-icon">
                         <button class="dropdown" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="8" viewBox="0 0 16 8"
                                 fill="none">
@@ -956,7 +956,10 @@
     <div id="preloader"></div>
 
 
-
+  <script src="responsivedatepicker2/accordion1.js"></script>
+  <script src="responsivedatepicker2/month.js"></script>
+  <script src="responsivedatepicker2/script.js"></script>
+  <script src="responsivedatepicker2/year.js"></script>
 
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script>
