--- a/login.html
+++ b/login.html
@@ -422,7 +422,7 @@
 
 
             <div class="w-50 mobile-w-100" id="rightSideEligibleId" style="background-image: url(./img/BG.png);">
-                <div class="eligibleListContainer" style="margin: 3rem 5%;">
+                <div class="eligibleListContainer" style="margin: 3rem 64px;">
 
                     <div class="mobile-display-flex mb-4">
                         <div class="" id="toggleLinkReverse">
