--- a/map/marker.html
+++ b/map/marker.html
@@ -11,8 +11,9 @@
 
     <script src="https://use.fontawesome.com/releases/v6.2.0/js/all.js"></script>
 
-    <link href="./mapstyle.css" rel="stylesheet" />
-    <script type="module" src="./mapindex.js"></script>
+    <link href="./map/mapstyle.css" rel="stylesheet" />
+    <script type="module" src="./map/mapindex.js"></script>
+    <script type="module" src="./js/script.js"></script>
    
 </head>
 <body>
