--- a/responsivedatepicker2/index.html
+++ b/responsivedatepicker2/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accordion Example</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="monthsecond.css">
-    <link rel="stylesheet" href="month.css">
-    <link rel="stylesheet" href="accordion.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- search mobile responsive -->
+    <link rel="stylesheet" href="./responsivedatepicker2/styles.css">
+    <link rel="stylesheet" href="./responsivedatepicker2/monthsecond.css">
+    <link rel="stylesheet" href="./responsivedatepicker2/month.css">
+    <link rel="stylesheet" href="./responsivedatepicker2/accordion.css">
+    <link rel="stylesheet" href="./responsivedatepicker2/year.css">
 </head>
 
 <body>
@@ -50,7 +50,7 @@
                                     <path
                                         d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10m0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6" />
                                 </svg> </span> <span>Jaipur</span></div>
-                        <div class="addlocationncontainerchild1" style="border-bottom:none"><span><svg
+                        <div class="addlocationncontainerchild1"><span><svg
                                     xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-geo-alt-fill" viewBox="0 0 16 16">
                                     <path
@@ -121,7 +121,7 @@
                                               <path d="m12.14 8.753-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
                                             </svg></button> -->
                                 </div>
-                                <script src="script.js"></script>
+                                <script src="./responsivedatepicker2/script.js"></script>
                             </div>
 
                             <!-- month section -->
@@ -206,7 +206,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <script src="month.js"></script>
+                                <script src="./responsivedatepicker2/month.js"></script>
                             </div>
 
                             <!-- year section -->
@@ -262,7 +262,7 @@
                                     </div>
                                 </div>
 
-                                <script src="year.js"></script>
+                                <script src="./responsivedatepicker2/year.js"></script>
                             </div>
                         </div>
 
@@ -329,11 +329,8 @@
     </div>
 
 
-    <script src="accordion1.js"></script>
+    <script src="./responsivedatepicker2/accordion1.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
