--- a/searchbarmain.html
+++ b/searchbarmain.html
@@ -208,7 +208,13 @@
 
             </ul>
         </div>
-
+<script>
+$('#Select-a-destination').on('click', function(event){
+    // The event won't be propagated up to the document NODE and 
+    // therefore delegated events won't be fired
+    event.stopPropagation();
+});
+</script>
 
         <div class="dropdown d-flex align-items-center justify-content-center">
             <a id="guest-dropdown" class="choose-a-date drop-sticky hero-down dropdown-toggle" href="#" role="button"
